# tjdjangoblog

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  pyvenv.cfg  requirements.txt  setup.sh
app/: settings.py  urls.py
blog/: settings.py  urls.py  views.py
djangoblog/: celery.py  settings.py  urls.py
djangoblog/apps/blog/: apps.py  forms.py  models.py  tasks.py  urls.py  views.py
djangoblog/apps/blog/migrations/: 0001_initial.py  0002_blogpost_time_diff_comment_time_diff.py
djangoblog/apps/oauth/: apps.py  backend.py  views.py
djangoblog/djangoblog/apps/blog/: urls.py
djangoblog/djangoblog/apps/oauth/: views.py
djangoblog/templates/: base.html  create.html  index.html  post.html
polls/: models.py
polls/migrations/: 0001_initial.py
tjdjangoblog/: asgi.py  settings.py  urls.py  wsgi.py
tjdjangoblog/apps/auth/: apps.py  views.py
tjdjangoblog/apps/blog/: apps.py  models.py  views.py
tjdjangoblog/templates/auth/: login.html
