[project]
name = "tjdjangoblog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "celery>=5.5.0",
    "datetime>=5.5",
    "django>=5.1.7",
    "humanize>=4.12.2", 
    "redis>=5.2.1",
    "ruff>=0.11.2",
    "social-auth-app-django>=5.4.3",
]
